+my solutions